<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp">

        <TextView
            android:id="@+id/tv_popular_movie"
            style="@style/HomeHeadStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/popular_movie"
            app:layout_constraintEnd_toStartOf="@+id/see_all_upcoming_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/see_all_popular_movie"
            style="@style/SeeAllStyle"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_popular_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_popular_movie" />

        <HorizontalScrollView
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_movie">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/items_list_home_large" />

            </RelativeLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_upcoming_movie"
            style="@style/HomeHeadStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/upcoming_movie"
            app:layout_constraintEnd_toStartOf="@+id/see_all_upcoming_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container1" />

        <TextView
            android:id="@+id/see_all_upcoming_movie"
            style="@style/SeeAllStyle"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_upcoming_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_upcoming_movie" />

        <HorizontalScrollView
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/tv_upcoming_movie">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcoming_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/items_list_home" />

            </RelativeLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_popular_tv"
            style="@style/HomeHeadStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/popular_tv"
            app:layout_constraintEnd_toStartOf="@+id/see_all_popular_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container2" />

        <TextView
            android:id="@+id/see_all_popular_tv"
            style="@style/SeeAllStyle"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_popular_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_popular_tv" />

        <HorizontalScrollView
            android:id="@+id/container3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/tv_popular_tv">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/items_list_home_large" />

            </RelativeLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_on_air_tv"
            style="@style/HomeHeadStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/on_air_tv"
            app:layout_constraintEnd_toStartOf="@+id/see_all_on_air_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container3" />

        <TextView
            android:id="@+id/see_all_on_air_tv"
            style="@style/SeeAllStyle"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_on_air_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_on_air_tv" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/tv_on_air_tv">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_on_air_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/items_list_home" />

            </RelativeLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>